# ai-movie-studio

./: .env.example  .gitignore  README.md  continuity_bible.example.json  continuity_bible.json  opencode.json  opencode.jsonc  pyproject.toml  scenes.example.json  scenes.json  tutorial.md
.opencode/agents/: director.md  qc.md  quality-control.md  screenwriter.md  shotboard.md
.opencode/commands/: movie-auto.md  movie.md
.opencode/skills/movie-studio/: SKILL.md
providers/: README.md  http.example.json  http.immediate.example.json  openrouter.json
schemas/: continuity_bible.schema.json  http_provider.schema.json  scenes.schema.json
scripts/: pilot.ps1
studio/: __init__.py  __main__.py  assemble.py  character_profile.py  cli.py  paths.py  review_sheet.py  scenes_io.py  tts.py  validate.py  video_style.py
studio/providers/: __init__.py  base.py  configurable.py  custom.py  fal.py  mock.py  openrouter.py  registry.py  replicate.py  xai.py
